resizing title on sidebar

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://https://tokolob.github.io/Portf-lio/",
+  "homepage": "https://https://tokolob.github.io/Home/",
   "name": "react_sass",
   "private": true,
   "version": "0.0.0",
